--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
-# Admin password — choose anything secure, used to log in to /admin
-PRIVATE_ADMIN_PASSWORD=your-admin-password
-
 # Mapbox — get from https://account.mapbox.com/access-tokens/
 PUBLIC_MAPBOX_TOKEN=pk.your-mapbox-token
+
+# Resend — email notifications (https://resend.com)
+RESEND_API_KEY=re_your-api-key
+RESEND_FROM_EMAIL=noreply@yourdomain.com
