--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
 		"vitest-browser-svelte": "^2.0.2"
 	},
 	"dependencies": {
+		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.97.0",
-		"mapbox-gl": "^3.18.1"
+		"mapbox-gl": "^3.18.1",
+		"resend": "^6.9.2"
 	}
 }
